--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "start": "web-dev-server"
   },
   "dependencies": {
-    "lit": "3.0.1",
-    "@shoelace-style/shoelace": "2.11.2"
+    "@lrnwebcomponents/video-player": "^7.0.18",
+    "@shoelace-style/shoelace": "2.11.2",
+    "lit": "3.0.1"
   },
   "devDependencies": {
-    "rollup-plugin-copy": "3.5.0",
     "@babel/preset-env": "^7.16.4",
     "@custom-elements-manifest/analyzer": "^0.4.17",
     "@open-wc/building-rollup": "^2.0.1",
@@ -27,7 +27,7 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@web/dev-server": "^0.1.28",
-    "@web/dev-server-storybook": "next",
+    "@web/dev-server-storybook": "^0.0.2",
     "@web/rollup-plugin-html": "^1.10.1",
     "@web/rollup-plugin-import-meta-assets": "^1.0.7",
     "@web/test-runner": "^0.13.22",
@@ -35,6 +35,7 @@
     "deepmerge": "^4.2.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.60.0",
+    "rollup-plugin-copy": "3.5.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-workbox": "^6.2.0"
   },
